--- a/react-social-app/package.json
+++ b/react-social-app/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.5",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
