--- a/react-social-app/package.json
+++ b/react-social-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-social-app",
   "version": "0.1.0",
+  "homepage": "https://anysofronova.github.io/react-social-app/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "react-test-renderer": "^17.0.2"
   }
 }
